--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,4 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/expenseListFragment">
+    <fragment
+        android:id="@+id/expenseListFragment"
+        android:name="com.cs4750.team15.expensetracker.ExpenseListFragment"
+        android:label="ExpenseListFragment"
+        tools:layout="@layout/fragment_expense_list" >
+        <action
+            android:id="@+id/show_expense_detail"
+            app:destination="@id/expenseDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/expenseDetailFragment"
+        android:name="com.cs4750.team15.expensetracker.ExpenseDetailFragment"
+        android:label="ExpenseDetailFragment"
+        tools:layout="@layout/fragment_expense_detail" >
+        <argument
+            android:name="expenseId"
+            app:argType="java.util.UUID" />
+        <action
+            android:id="@+id/select_date"
+            app:destination="@id/datePickerFragment" />
+    </fragment>
+    <dialog
+        android:id="@+id/datePickerFragment"
+        android:name="com.cs4750.team15.expensetracker.DatePickerFragment"
+        android:label="DatePickerFragment" >
+        <argument
+            android:name="crimeDate"
+            app:argType="java.util.Date" />
+    </dialog>
+
+</navigation>
