--- a/app/src/main/res/layout/fragment_expense_detail.xml
+++ b/app/src/main/res/layout/fragment_expense_detail.xml
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/expense_amount_hint"
             android:importantForAutofill="no"
-            android:inputType="text" />
+            android:inputType="numberDecimal" />
     </LinearLayout>
 
     <TextView
