added new fragment for welcome screen

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/expenseListFragment">
+    app:startDestination="@id/welcomeFragment">
     <fragment
         android:id="@+id/expenseListFragment"
         android:name="com.cs4750.team15.expensetracker.expenselist.ExpenseListFragment"
@@ -33,5 +33,14 @@
             android:name="expenseDate"
             app:argType="java.util.Date" />
     </dialog>
+    <fragment
+        android:id="@+id/welcomeFragment"
+        android:name="com.cs4750.team15.expensetracker.WelcomeFragment"
+        android:label="WelcomeFragment"
+        tools:layout="@layout/welcome_screen">
+        <action
+            android:id="@+id/show_expense_list"
+            app:destination="@id/expenseListFragment" />
+    </fragment>
 
 </navigation>
