--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -47,7 +47,7 @@
     </fragment>
     <fragment
         android:id="@+id/spendingAnalysisFragment"
-        android:name="com.cs4750.team15.expensetracker.SpendingAnalysisFragment"
+        android:name="com.cs4750.team15.expensetracker.spendinganalysis.SpendingAnalysisFragment"
         android:label="SpendingAnalysisFragment"
         tools:layout="@layout/spending_analysis"/>
 
