added new colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="jade">#00AC67</color>
     <color name="shamrock_green">#00965A</color>
     <color name="peach">#FFEFC4</color>
+    <color name="honeydew">#E5FFE9</color>
+    <color name="office_green">#008227</color>
+    <color name="saffron">#F8C52C</color>
 </resources>
