--- a/app/src/main/res/layout/fragment_welcome_screen.xml
+++ b/app/src/main/res/layout/fragment_welcome_screen.xml
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:drawableTop="@drawable/noun_joker_2343033"
+        android:drawableTop="@drawable/ic_joker"
         android:fontFamily="@font/secular_one"
         android:text="welcome"
         android:textAllCaps="false"
