--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="honeydew">#E5FFE9</color>
     <color name="office_green">#008227</color>
     <color name="saffron">#F8C52C</color>
+    <color name="jet">#3B3A3A</color>
 </resources>
