--- a/app/src/main/res/layout/fragment_expense_detail.xml
+++ b/app/src/main/res/layout/fragment_expense_detail.xml
@@ -26,7 +26,7 @@
                 android:background="@color/black"/>
 
             <ImageButton
-                android:id="@+id/crime_camera"
+                android:id="@+id/receipt_camera"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_receipt" />
