--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -54,7 +54,7 @@
         android:label="SpendingAnalysisFragment" />
     <fragment
         android:id="@+id/chatFragment"
-        android:name="com.cs4750.team15.expensetracker.chat.ChatFragment"
+        android:name="com.cs4750.team15.expensetracker.chat.ChatListFragment"
         android:label="ChatFragment" />
 
 </navigation>
