--- a/app/src/main/res/layout/list_item_expense.xml
+++ b/app/src/main/res/layout/list_item_expense.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/dm_mono_medium"
+        android:fontFamily="@font/open_sans_extrabold"
         android:text="Expense Title"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textStyle="bold"
@@ -26,7 +26,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/dm_mono_medium"
+        android:fontFamily="@font/open_sans_extrabold"
         android:text="Expense Date"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +41,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
-        android:fontFamily="@font/dm_mono_medium"
+        android:fontFamily="@font/open_sans_extrabold"
         android:text="Expense Amount"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,10 +52,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="51dp"
-        android:fontFamily="@font/dm_mono_medium"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/open_sans_extrabold"
         android:text="Expense Category"
-        app:layout_constraintStart_toEndOf="@+id/expense_amount"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/expense_amount" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
